# rocket-oauth-github-demo

./: .gitignore  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  Procfile  README.md  Rocket.toml
src/: api.rs  auth.rs  main.rs  models.rs  templates.rs
templates/: base.html  index.html  logged_in_index.html  repositories.html
