[package]
name = "rocket-oauth-github-demo"
version = "0.1.0"
authors = ["Amy Keibler <wanderingelf14@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.2", features = ["tls"] }
rocket_contrib = "0.4.2"
serde = { version  = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
oauth2 = "1.3.0"
askama = { version = "0.8.0", features = ["with-rocket"] }
reqwest = "0.9.18"
log = "0.4.6"
failure = "0.1.5"
